--- a/about1.html
+++ b/about1.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link to CSS -->
-    <link rel="stylesheet" href="styleabout.css">
+    <link rel="stylesheet" href="stylea2.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
