--- a/index10.html
+++ b/index10.html
@@ -5,7 +5,7 @@
     <title>NORDIC COUNTRIES</title>
 
     <!-- Link to CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
