I added images linked page

--- a/index10.html
+++ b/index10.html
@@ -27,8 +27,8 @@
                     <i class="bi bi-x-circle-fill" id="close-menu" aria-label="Close menu"></i> <!-- Close menu button -->
                     <ul>
                         <li><a href="#" class="nav-item">HOME</a></li>
-                        <li><a href="about.html" class="nav-item">ABOUT</a></li>
-                        <li><a href="services.html" class="nav-item">SERVICES</a></li>
+                        <li><a href="about1.html" class="nav-item">ABOUT</a></li>
+                        <li><a href="services1.html" class="nav-item">SERVICES</a></li>
                     </ul>
                 </div>
                 <!-- Menu Toggle Button -->
@@ -52,25 +52,25 @@
                 <p>There are several things one can enjoy while pursuing their education paths. Do the internships, part-time jobs available on the college campus, know the culture, make friends, and what not!</p>
                 
                 <!-- Add the image -->
-                <img src="helsinki.jpeg" alt="Helsinki View" style="width: 100%; height: auto; margin: 20px 0;">
+                <img src="images.jpg" alt="Helsinki View" style="width: 100%; height: auto; margin: 20px 0;">
 
                 <p>Dreams in your eyes? Change them into reality through the guidance we offer, see the elevation in your persona, and set the goals you dreamt of someday.</p>
             </div>
             <div class="course-col2">
                 <h3>SEE SCHOLARSHIP PROGRAMS</h3>
-                <p>Most of the universities offers scholarship for different degree program students based on the GPA, starting applications every spring and autumn intakes.</p>
+                <p>Most of the universities offers scholarship for different degree program students based on the GPA, starting applications every spring and autumn intakes. You when?</p>
                 <!--Add the image-->
-                <img src="students2.jpeg" alt="Scholarships" style="width: 100%; height: auto; margin: 20px 0;">
+                <img src="helsinki.jpg" alt="Scholarships" style="width: 100%; height: auto; margin: 20px 0;">
 
-                <p> Many already received! You when? Get up to 99% of tution fees free, just by one message to us for seeing the results, choose Nordics always!.</p>
+                <p> Many already received! Get up to 99% of tution fees free, just by one message to us for seeing the results, choose Nordics always!.</p>
             </div>
             <div class="course-col3">
                 <h3>CLAIM LOANS PROCURETMENT</h3>
-                <p>Many legal, non-profit goverement financial institutions offers various loans access upon the studies.</p>
+                <p>Many legal, non-profit goverement financial institutions offers various loans access upon the studies.Check the eligibility!And start the procedure.</p>
                 <!--Add the image-->
-                <img src="students.jpeg" alt="loans" style="width: 100%; height: auto; margin: 20px 0;">
+                <img src="Untitled.jpg" alt="loans" style="width: 100%; height: auto; margin: 20px 0;">
 
-                <p>Check the eligibility!And start the procedure.This process ensures that students have adequate financial support for their tuition, living expenses, and other costs associated with studying overseas.</p>
+                <p>This process ensures that students have adequate financial support for their tuition, living expenses, and other costs associated with studying overseas.</p>
             </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
         <h1>WHAT OUR STUDENT SAYS</h1>
         <div class="row">
             <div class="testimonial-col">
-                <img src="girl.1.jpg" alt="Christine Berkley">
+                <img src="gitrl.jpg" alt="Christine Berkley">
                 <p>Friendfully guided. All the information provided was clear enough from the starting. At every step, there were processes involved, and services were given even after the procedure was done.</p>
                 <h3>Christine Berkley</h3>
                 <i class="bi bi-star-fill"></i>
