I changed the images and added

--- a/about1.html
+++ b/about1.html
@@ -31,13 +31,13 @@
 
             <div class="team">
                 <div class="team-member">
-                    <img src="ive-solidified-my-name-in-the-bu.jpg" alt="Manasvi" class="team-img">
+                    <img src="Woman.jpg" alt="Manasvi" class="team-img">
                     <h3>MANASVI</h3>
                     <p>Founder of the Institution, came into reflection in 2005.</p>
                 </div>
 
                 <div class="team-member">
-                    <img src="successful-mature-businessman-lo.jpg" alt="Charles" class="team-img">
+                    <img src="Man.jpg" alt="Charles" class="team-img">
                     <h3>CHARLES</h3>
                     <p>Co-Founder of the institution serving the company for 10 consecutive years, and also conducting student counseling.</p>
                 </div>
