--- a/index10.html
+++ b/index10.html
@@ -60,7 +60,7 @@
                 <h3>SEE SCHOLARSHIP PROGRAMS</h3>
                 <p>Most of the universities offers scholarship for different degree program students based on the GPA, starting applications every spring and autumn intakes. You when?</p>
                 <!--Add the image-->
-                <img src="helsinki.jpg" alt="Scholarships" style="width: 100%; height: auto; margin: 20px 0;">
+                <img src="Building.jpg" alt="Scholarships" style="width: 100%; height: auto; margin: 20px 0;">
 
                 <p> Many already received! Get up to 99% of tution fees free, just by one message to us for seeing the results, choose Nordics always!.</p>
             </div>
