--- a/services1.html
+++ b/services1.html
@@ -17,15 +17,15 @@
             <h2>Universities We Offer In</h2>
             <div class="service-grid">
                 <div class="service-card">
-                    <img src="denmark.jpg" alt="Denmark">
+                    <img src="Denmark.jpg" alt="Denmark">
                     <h3>Denmark</h3>
                 </div>
                 <div class="service-card">
-                    <img src="finland2.jpg" alt="Finland">
+                    <img src="helsinki.jpg" alt="Finland">
                     <h3>Finland</h3>
                 </div>
                 <div class="service-card">
-                    <img src="norway2.jpg" alt="Norway">
+                    <img src="Normay.jpg" alt="Norway">
                     <h3>Norway</h3>
                 </div>
             </div>
